--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "publish": "ng build --prod && gulp publish"
+    "deploy-prod": "ng build --prod && gulp publish"
   },
   "private": true,
   "dependencies": {
