--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "gulp": "^3.9.1",
     "gulp-s3-upload": "^1.6.4",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
+    "jasmine-spec-reporter": "^2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "karma-spec-reporter": "0.0.30",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
